--- a/notebooks/basic-usage.ipynb
+++ b/notebooks/basic-usage.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x75124f1309a0>]"
+       "[<matplotlib.lines.Line2D at 0x7edd70130970>]"
       ]
      },
      "execution_count": 1,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x75124e7234c0>]"
+       "[<matplotlib.lines.Line2D at 0x7edd70033490>]"
       ]
      },
      "execution_count": 2,
@@ -167,18 +167,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "af200595-d2e5-4818-aa90-845d4ee494ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from statistics import mean,stdev\n",
-    "from math import log"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "df06dcac-6a21-47c5-9e4b-70803ffa768d",
    "metadata": {},
@@ -188,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d4d90ffb-4d73-4de1-886d-92436fd0eb96",
    "metadata": {},
    "outputs": [],
@@ -206,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "953f6392-1f66-474b-b527-82a93345468e",
    "metadata": {},
    "outputs": [],
@@ -219,38 +207,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "05d1cffd-f83e-49c0-a994-c488f502b7b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(196, 392)]"
+       "[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "history[1300]"
+    "history[500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b12862c5-855e-4e8a-bd04-383977436818",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x75124c992bf0>]"
+       "[<matplotlib.lines.Line2D at 0x7edd67ff6470>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
