--- a/notebooks/basic-usage.ipynb
+++ b/notebooks/basic-usage.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7edd70130970>]"
+       "[<matplotlib.lines.Line2D at 0x7915fa834970>]"
       ]
      },
      "execution_count": 1,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7edd70033490>]"
+       "[<matplotlib.lines.Line2D at 0x7915fa737490>]"
       ]
      },
      "execution_count": 2,
@@ -161,9 +161,10 @@
    "source": [
     "from math import log\n",
     "\n",
-    "cost = capa_normal_mean(500)\n",
-    "beta = 4*log(len(Z))\n",
-    "beta_dash = 3*log(len(Z))"
+    "wsize = 500\n",
+    "cost = capa_normal_mean(wsize)\n",
+    "beta = 4*log(wsize)\n",
+    "beta_dash = 3*log(wsize)"
    ]
   },
   {
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "05d1cffd-f83e-49c0-a994-c488f502b7b1",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7edd67ff6470>]"
+       "[<matplotlib.lines.Line2D at 0x7915fa1fe230>]"
       ]
      },
      "execution_count": 7,
@@ -256,6 +257,31 @@
    "source": [
     "Y = [transformer(z) for z in Z]\n",
     "plt.plot(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af46b91d-86fd-4a85-bfcd-b5fd92a1078b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wsize' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n\u001b[1;32m      2\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manaomaly_history\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m pickle\u001b[38;5;241m.\u001b[39mdump((history,Z,\u001b[43mwsize\u001b[49m),file)\n\u001b[1;32m      4\u001b[0m file\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'wsize' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "file = open('anaomaly_history','wb')\n",
+    "pickle.dump((history,Z,wsize),file)\n",
+    "file.close()"
    ]
   }
  ],
