--- a/notebooks/basic-usage.ipynb
+++ b/notebooks/basic-usage.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7edd70130970>]"
+       "[<matplotlib.lines.Line2D at 0x79d476720970>]"
       ]
      },
      "execution_count": 1,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7edd70033490>]"
+       "[<matplotlib.lines.Line2D at 0x79d476123490>]"
       ]
      },
      "execution_count": 2,
@@ -160,18 +160,10 @@
    "outputs": [],
    "source": [
     "from math import log\n",
-    "\n",
-    "cost = capa_normal_mean(500)\n",
-    "beta = 4*log(len(Z))\n",
-    "beta_dash = 3*log(len(Z))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df06dcac-6a21-47c5-9e4b-70803ffa768d",
-   "metadata": {},
-   "source": [
-    "#### Create a CAPA \"scanner\" from the cost and the transformer"
+    "wsize = 500\n",
+    "cost = capa_normal_mean(wsize)\n",
+    "beta = 4*log(wsize)\n",
+    "beta_dash = 3*log(wsize)"
    ]
   },
   {
@@ -182,6 +174,14 @@
    "outputs": [],
    "source": [
     "scanner = compose(capa(cost,beta,beta_dash),transformer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df06dcac-6a21-47c5-9e4b-70803ffa768d",
+   "metadata": {},
+   "source": [
+    "#### Create a CAPA \"scanner\" from the cost and the transformer"
    ]
   },
   {
@@ -207,38 +207,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "id": "2cb1818a-0fd5-405c-b05c-9a9f424faedd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[99]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history[100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "05d1cffd-f83e-49c0-a994-c488f502b7b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[(97, 293)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "history[500]"
+    "history[1399]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b12862c5-855e-4e8a-bd04-383977436818",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7edd67ff6470>]"
+       "[<matplotlib.lines.Line2D at 0x79d474dd6c20>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,6 +277,140 @@
    "source": [
     "Y = [transformer(z) for z in Z]\n",
     "plt.plot(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73c82c1a-1c30-47a0-a77b-aad3c5eca8a5",
+   "metadata": {},
+   "source": [
+    "#### Save results for plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3730c5e8-1496-414a-8b38-a735db143b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dill as pickle # needed to pickle closures\n",
+    "file = open('anomaly_history', 'wb')\n",
+    "pickle.dump((history,Z,wsize), file)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9167813d-867d-4074-8010-e924debeb271",
+   "metadata": {},
+   "source": [
+    "#### Restarting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3b4f2935-ad88-4dbf-9ecf-3eec537d16f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost = capa_normal_mean(wsize)\n",
+    "scanner = compose(capa(cost,beta,beta_dash),transformer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "36804d28-fd8f-4464-a340-d827971dbba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = list()\n",
+    "for z in Z[:300] :\n",
+    "    changes = scanner(z)\n",
+    "    history.append(changes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3b61b83d-c5c0-4f88-ab53-fea833ef63ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[99]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a94a9449-dea6-4dc6-8d05-783ae06efdac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save and delete\n",
+    "file = open('scanner','wb')\n",
+    "pickle.dump(scanner,file)\n",
+    "file.close()\n",
+    "del(scanner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a910dc2c-9d73-4319-8645-3aa4b0db731b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reload\n",
+    "file = open('scanner', 'rb')\n",
+    "scanner = pickle.load(file)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b0000e3c-c984-4ec0-8661-452865cdb2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for z in Z[300:] :\n",
+    "    changes = scanner(z)\n",
+    "    history.append(changes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b5ea3937-4adf-4762-85c6-451d8a2670d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(196, 392)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history[1300]"
    ]
   }
  ],
